fix: layout shift + refactor Finance

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
   html,
   body {
-    @apply h-screen w-screen overflow-x-hidden scroll-smooth bg-white text-black dark:bg-black dark:text-white;
+    @apply scroll-smooth bg-slate-50 text-black dark:bg-black dark:text-white;
   }
 
   #root {
